--- a/index.html
+++ b/index.html
@@ -32,13 +32,27 @@
                         Muhammad Fazeel<br/>
                     </div>
                     <div class="subtext">
-                    A student who is passionate about technology and collaboration. I thrive when working with others to create innovative solutions.
+                        I'm <a>
+                            a 18
+                            <script>
+                                let birthday = new Date("Sep 24 2005");
+                                let ageDate = new Date(Date.now() - birthday);
+                                let age = Math.abs(ageDate.getUTCFullYear() - 1970);
+                                let word = "a ";
+                                if(age == 18){
+                                    word = "an ";
+                                }
+                                document.currentScript.parentElement.innerHTML = word + age.toString();
+                                //Lol. This makes me laugh.
+                            </script>
+                        </a>
+                        year old student who is passionate about technology and collaboration. I thrive when working with others to create innovative solutions.
                     </div>
                     <div style="height:16px;"></div>
                     <div class="social-buttons">
                         <div class="social-button" onclick="window.open('https://github.com/MxmoW');"><svg fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" style="width:100%; height:100%;" xmlns="http://www.w3.org/2000/svg"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></div>
                         <div class="social-button" onclick="window.open('https://www.linkedin.com/in/muhammad-fazeel-879b29292/');"><svg fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" style="width:100%; height:100%;" xmlns="http://www.w3.org/2000/svg"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></div>
-                        <div class="social-button">
+                        <div class="social-button" oneclick="window.open('https://www.linkedin.com/in/muhammad-fazeel-879b29292/');">
                             <svg fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" class="w-5 h-5 m-2 text-highlight " style="width:100%; height:100%;" xmlns="http://www.w3.org/2000/svg"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                             <div class="social-popup" style="position: absolute;">
                                 fazeelwaqas@gmail.com
@@ -73,7 +87,7 @@
                                 <div class="col-layout">
                                     <div class="content-col">
                                         <div class="subsection">
-                                            Software:
+                                            Major Collaborative Projects:
                                         </div>
                                         <div class="subsection" style="color:var(--text-light-2);">
                                             - Java<br/>
@@ -111,7 +125,7 @@
                     <div class="content-text">
                         <div class="col-layout collapsible">
                             <div class="content-col">
-                                <div class="subsection-head" nav-sublabel="software">Major Collaborative Projects</div>
+                                <div class="subsection-head" nav-sublabel="Major Projects">Major Projects</div>
                                 <div class="subsection">
                                     <div class="grid-layout">
                                         <div class="project fastrm">
