--- a/index.html
+++ b/index.html
@@ -32,21 +32,7 @@
                         Muhammad Fazeel<br/>
                     </div>
                     <div class="subtext">
-                        I'm <a>
-                            a 18
-                            <script>
-                                let birthday = new Date("Sep 24 2005");
-                                let ageDate = new Date(Date.now() - birthday);
-                                let age = Math.abs(ageDate.getUTCFullYear() - 1970);
-                                let word = "a ";
-                                if(age == 18){
-                                    word = "an ";
-                                }
-                                document.currentScript.parentElement.innerHTML = word + age.toString();
-                                //Lol. This makes me laugh.
-                            </script>
-                        </a>
-                        year old student who is passionate about technology and collaboration. I thrive when working with others to create innovative solutions.
+A student who is passionate about technology and collaboration. I thrive when working with others to create innovative solutions.
                     </div>
                     <div style="height:16px;"></div>
                     <div class="social-buttons">
