--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         Muhammad Fazeel<br/>
                     </div>
                     <div class="subtext">
-A student who is passionate about technology and collaboration. I thrive when working with others to create innovative solutions.
+A student who is passionate about technology and collaboration. Thrives when working with others to create innovative solutions.
                     </div>
                     <div style="height:16px;"></div>
                     <div class="social-buttons">
@@ -81,7 +81,7 @@ A student who is passionate about technology and collaboration. I thrive when wo
                                             - Siemens PLCs<br/>
                                             - Allan Bradley PLCs<br/>
                                             - Computer Aided Design<br/>
-                                            - Human Machine Interface)<br/>
+                                            - Human Machine Interface<br/>
                                         </div>
                                     </div>
                                     <div class="content-col">
