--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ A student who is passionate about technology and collaboration. Thrives when wor
                                 <div class="col-layout">
                                     <div class="content-col">
                                         <div class="subsection">
-                                            Major Collaborative Projects:
+                                            Software
                                         </div>
                                         <div class="subsection" style="color:var(--text-light-2);">
                                             - Java<br/>
@@ -95,7 +95,6 @@ A student who is passionate about technology and collaboration. Thrives when wor
                                             - Motion Control<br/>
                                             - Industrial Robotics<br/>
                                             - Mechanical Fundamentals<br/>
-                                            - CAD (Computer-Aided Design)<br/>
                                             - Microcontroller Programming<br/>
                                             - Control Systems and Automation<br/>
                                         </div>
