--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ A student who is passionate about technology and collaboration. Thrives when wor
                                             Technologies:
                                         </div>
                                         <div class="subsection" style="color:var(--text-light-2);">
-                                            - Electronics<br/>
-                                            - Pneumatics<br/>
                                             - 3D Printing<br/>
+                                            - Pneumatics<br/>
+                                            - Electronics<br/>
                                             - Motion Control<br/>
                                             - Industrial Robotics<br/>
                                             - Mechanical Fundamentals<br/>
@@ -145,7 +145,7 @@ A student who is passionate about technology and collaboration. Thrives when wor
                                             <video src="" late-src="Digital Electronics.mov" poster="Digital Electronics.mov"  class="bg" autoplay loop muted disablePictureInPicture></video>
                                         </div>
                                         <div class="project bagt">
-                                            <div class="subsection-head" nav-sublabel="">PS4 Controller Repair</div>
+                                            <div class="subsection-head" nav-sublabel="">Controller Repair</div>
                                             <div class="desc">
                                                 Component Re-installation
                                             </div>
@@ -153,7 +153,7 @@ A student who is passionate about technology and collaboration. Thrives when wor
                                             <img src="PS4 Controller.png" class="bg">
                                         </div>
                                         <div class="project doodleswing">
-                                            <div class="subsection-head" nav-sublabel="">Desktop Computer Building</div>
+                                            <div class="subsection-head" nav-sublabel="">Computer Building</div>
                                             <div class="desc">
                                                 Troubleshooting + Installation
                                             </div>
