--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                         <div class="subsection" style="text-align:center;">
                             <a style="color:var(--text-light-2);">Email:</a>
                              fazeelwaqas@gmail.com
-                            <a onclick="navigator.clipboard.writeText('fazeelwaqas@gmail.com')" class="email-copy-button contact-button">Copy</a>  <a href="mailto:fazeelwaqas@gmail.com">Open</a>
-                            <br/><br/>
+                             <a class="contact-button email-copy-button" onclick="navigator.clipboard.writeText('fazeelwaqas@gmail.com')">Copy</a>  <a href="mailto:fazeelwaqas@gmail.com">Open</a>
+                             <br/><br/>
                             <a style="color:var(--text-light-2);">Github:</a>
                             <a onclick="window.open('https://github.com/mxmow');" class="contact-button">Link</a>
                             <br/><br/>
@@ -192,8 +192,9 @@
                         </div>
                     </div>
                     <div class="page-foot noreveal">
-                        <br/>
-                        <a onclick="window.open('');" class="contact-button" style="color:var(--text-light);">Designed with HTML/JAVASCRIPT/CSS In Collabration with Bryan Soares and Danil Petrov</a>
+                        Designed with HTML/JAVASCRIPT/CSS In Collabration with Bryan Soares and Daniil Petrov<br/>
+                        <a onclick="window.open('https://github.com/MxmoW/Portfolio');" class="contact-button" style="color:var(--text-light);">View on Github
+                        </a> 
                     </div>
                 </div>
                 <div class="sidebar-right"></div>
