--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         <div class="project fastrm">
                                             <div class="subsection-head" nav-sublabel="">Automated Cafe Bell</div>
                                             <div class="desc">
-                                                School Bell Project - Siemens PLC and HMI
+                                                School Bell Project - Siemens PLC and HMI (In Collaboration With Bryan Soares) 
                                             </div>
                                             <div class="background-cover"></div>
                                             <video src="" late-src="0104.mp4" poster="0104.mp4"  class="bg" autoplay loop muted disablePictureInPicture></video>
@@ -125,7 +125,7 @@
                                     <div class="project fastrm">
                                         <div class="subsection-head" nav-sublabel="">Underwater ROV</div>
                                         <div class="desc">
-                                            Entirely Custom Built - Exploration + Retrieving Ordinances 
+                                            Entirely Custom Built - Retrieving Deep Sea Ordinances 
                                         </div>
                                         <div class="background-cover"></div>
                                         <img src="Stinky.JPG" class="bg">
@@ -140,7 +140,7 @@
                                         <div class="project bagt">
                                             <div class="subsection-head" nav-sublabel="">Digital Electroncs</div>
                                             <div class="desc">
-                                                CD4017 + 555IC BCD Counter
+                                                CD4017 + 555IC BCD Counter 
                                             </div>
                                             <div class="background-cover"></div>
                                             <video src="" late-src="Digital Electronics.mov" poster="Digital Electronics.mov"  class="bg" autoplay loop muted disablePictureInPicture></video>
@@ -148,7 +148,7 @@
                                         <div class="project bagt">
                                             <div class="subsection-head" nav-sublabel="">PS4 Controller Repair</div>
                                             <div class="desc">
-                                                Component Re-installation
+                                                Soldering Components / Re-installation
                                             </div>
                                             <div class="background-cover"></div>
                                             <img src="PS4 Controller.png" class="bg">
@@ -156,7 +156,7 @@
                                         <div class="project doodleswing">
                                             <div class="subsection-head" nav-sublabel="">Desktop Computer Building</div>
                                             <div class="desc">
-                                                Troubleshooting + Installation
+                                                Troubleshooting + Installation 
                                             </div>
                                             <div class="background-cover"></div>
                                             <img src="Open Build PC.png" class="bg">
@@ -164,7 +164,7 @@
                                         <div class="project factorygame">
                                             <div class="subsection-head" nav-sublabel="">Swervo - Obstacle Avoidance</div>
                                             <div class="desc">
-                                                Ultrasonic, IR, and Wireless Technology
+                                                Sensor Technologies and Wireless Communication 
                                             </div>
                                             <div class="background-cover"></div>
                                             <img src="Swervo.jpg" class="bg">
