--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         Muhammad Fazeel<br/>
                     </div>
                     <div class="subtext">
-                    A student who is passionate about technology and collaboration. I thrive when working with others to create innovative solutions.
+                    A student who is passionate about technology and collaboration.
                     </div>
                     <div style="height:16px;"></div>
                     <div class="social-buttons">
