--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     Who I am
                                 </div>
                                 <div class="subsection">
-                                    As a dedicated student deeply passionate about Robotics and Electrical/Computer Engineering, I've dedicated myself to projects that test my limits and fuel my passion for innovation. My portfolio showcases hands-on experiences, from intricate circuitry to the creation of functional robots, reflecting my commitment to technical excellence. With a foundation built on integrity and grit, I persevere through challenges, continuously pushing boundaries in pursuit of groundbreaking solutions. I believe in harnessing technology to positively impact the world, striving to create a future where innovation meets practicality
+                                    As a committed student with a deep passion for Robotics and Electrical/Computer Engineering, I've dedicated myself to projects that test my limits and fuel my passion for innovation. My portfolio showcases hands-on experiences, from intricate circuitry to the creation of functional robots, reflecting my commitment to technical excellence. With a foundation built on integrity and grit, I persevere through challenges, continuously pushing boundaries in pursuit of groundbreaking solutions. I believe in harnessing technology to positively impact the world, striving to create a future where innovation meets practicality
                                 </div>
                                 <div class="subsection">
                             <!-- write code here-->
